# ai-invest

./: CLAUDE.md  README.md  connect_tws.py  db.py  finance.py  fred.py  fx.py  ib_statement.py  ibkr.py  models.py  plan.md  pyproject.toml  rebuild_history.py  risk_free.py  server.py  snapshot.py  trade_log.py
notes/: 001-initial-repo-survey.md  002-verify-and-fix.md  003-fix-options-cost-fx-trades.md  004-cost-basis-monthly-sharpe.md  005-industry-mapping-plan.md  006-multicurrency-pnl-fixes.md  007-multi-csv-dedup.md  008-fred-rf-and-overlays.md  overview.md
static/: app.js  index.html  style.css
tests/: test_finance.py  test_ib_statement.py  test_rebuild_history.py
